@@ -1,3 +1,11 @@
+2004-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/download/using.html (href): upgrade to 2.4
+
+2004-10-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/switch/index.html (href): rephrase.
+
 2004-10-30  Graham Percival  <gperlist@shaw.ca>
 
 	* site/about/thanks.html: added bio.
